Report initialized backend modules. Let frontend modules use this info.

--- a/software/modules/frontend/proxy/navbar.html
+++ b/software/modules/frontend/proxy/navbar.html
@@ -1,6 +1,6 @@
 <li class="nav-item">
     <a id="sidebar-bricklets" class="nav-link" data-toggle="tab" role="tab"
-        aria-controls="bricklets" aria-selected="true" href="#bricklets">
+        aria-controls="bricklets" aria-selected="true" href="#bricklets" hidden>
         <span data-feather="cpu"></span>
         Bricklets
     </a>
