--- a/software/modules/frontend/firmware_update/navbar.html
+++ b/software/modules/frontend/firmware_update/navbar.html
@@ -1,6 +1,6 @@
 <li class="nav-item">
     <a id="sidebar-flash" class="nav-link" data-toggle="tab" role="tab" aria-controls="flash"
-        aria-selected="true" href="#flash">
+        aria-selected="true" href="#flash" hidden>
         <span data-feather="zap"></span>
         Firmware
     </a>
