--- a/software/modules/frontend/wifi/navbar.html
+++ b/software/modules/frontend/wifi/navbar.html
@@ -1,6 +1,6 @@
 <li class="nav-item">
     <a id="sidebar-wifi" class="nav-link" data-toggle="tab" role="tab" aria-controls="wifi"
-        aria-selected="true" href="#wifi">
+        aria-selected="true" href="#wifi" hidden>
         <span data-feather="wifi"></span>
         WiFi Settings
     </a>
