Use lg-8 breakpoint.
This is in preparation for the energy graph on the status page.

--- a/software/modules/frontend/wifi/status.html
+++ b/software/modules/frontend/wifi/status.html
@@ -5,7 +5,7 @@
             <span class="form-label">WiFi Connection </span>
         </label>
     </div>
-    <div class="col-sm-4">
+    <div class="col-lg-8 col-xl-4">
         <div class="btn-group flex-wrap" role="group" style="width: 100%">
             <button id="wifi_sta_not_configured" type="button"
                 class="btn btn-outline-primary" disabled>Not
@@ -27,7 +27,7 @@
             <span class="form-label">WiFi Access Point</span>
         </label>
     </div>
-    <div class="col-sm-4">
+    <div class="col-lg-8 col-xl-4">
         <div class="btn-group flex-wrap" role="group" style="width: 100%">
             <button id="wifi_ap_disabled" type="button" class="btn btn-outline-primary"
                 disabled>Deactivated</button>
@@ -39,4 +39,4 @@
                 class="btn btn-outline-danger" disabled>Fallback active</button>
         </div>
     </div>
-</div> 
+</div>
