--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -46,29 +46,32 @@
                     id="current_spiffs">
             </div>
 
-            <div class="col-lg-6 mt-2">
-                <label id="spiffs_label" for='spiffs_file_select'>SPIFFS Update</label>
-                <div class="input-group mb-3">
-                    <div class="custom-file">
-                        <input name="spiffs" type="file" class="custom-file-input form-control"
-                            id="spiffs_file_select">
-                        <label class="custom-file-label form-control"
-                            for="spiffs_file_select">Select File</label>
-                    </div>
-                    <div class="input-group-append">
-                        <input id="update_spiffs_button" type='submit' value="Update"
-                            class="btn btn-primary form-control" disabled>
-                    </div>
-                </div>
-            </div>
-            <div class="col-lg-3 mt-2" id="spiffs-progress" hidden>
-                <label for='spiffs-progress-bar'>Uploading SPIFFS...</label>
-                <div class="form-progress">
-                    <div id="spiffs-progress-bar" class="progress-bar form-control"
-                        role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
-                        aria-valuemax="100"></div>
-                </div>
+            <div class="col-lg-3 mt-2">
+                <label id="spiffs_label" for='spiffs_factory_reset'>Reset all settings to factory default</label>
+                <button id="spiffs_factory_reset" type="button" class="form-control btn btn-danger">Factory Reset</button>
             </div>
         </div>
     </form>
+
+    <div class="modal fade" id="factory_reset_modal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div id="factory_reset_content" class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <form-label class="modal-title">Factory Reset</form-label>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    A factory reset will reset all settings to their default values. <b>This action cannot be undone.</b> The wallbox will re-open the WiFi access point with the default SSID and passphrase. Are you sure?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary"
+                        data-dismiss="modal">Abort</button>
+                    <button id="factory_reset_confirm" type="button"
+                        class="btn btn-danger">Reset to factory defaults</button>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
