Add support for translations. Add german translation.

--- a/software/modules/frontend/firmware_update/navbar.html
+++ b/software/modules/frontend/firmware_update/navbar.html
@@ -1,7 +1,7 @@
 <li class="nav-item">
     <a id="sidebar-flash" class="nav-link" data-toggle="tab" role="tab" aria-controls="flash"
         aria-selected="true" href="#flash" hidden>
-        <span data-feather="zap"></span>
-        Firmware
+        <span data-feather="settings"></span>
+        <span data-i18n="firmware_update.navbar.system">Firmware</span>
     </a>
 </li>
