--- a/software/modules/frontend/wifi/content.html
+++ b/software/modules/frontend/wifi/content.html
@@ -1,32 +1,32 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-wifi" id="wifi">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">WiFi Settings</h1>
+        <h1 class="h2" data-i18n="wifi.content.wifi_settings">WiFi Settings</h1>
         <div class="text-right">
             <button id="wifi_carousel_abort_button" type="button" class="btn btn-primary btn-danger"
-                hidden><span data-feather="x"></span>Cancel</button>
+                hidden><span data-feather="x"></span><span  data-i18n="wifi.content.cancel">Cancel</span></button>
             <button id="wifi_carousel_back_button" type="button" class="btn btn-primary"
-                hidden><span data-feather="arrow-left"></span>Back</button>
+                hidden><span data-feather="arrow-left"></span><span data-i18n="wifi.content.back">Back</span></button>
         </div>
     </div>
     <div id="wifi_config_carousel" class="carousel slide" data-interval="false"
         data-keyboard="false">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <h4>Client Configuration</h4>
+                <h4 data-i18n="wifi.content.client_configuration">Client Configuration</h4>
                 <div class="form-group row">
                     <div class="col-lg-4 mt-2">
-                        <label for='wifi_ap_configuration_state'>Configured Access Point</label>
+                        <label for='wifi_ap_configuration_state' data-i18n="wifi.content.configured_ap">Configured Access Point</label>
                         <input class="form-control" type="text"
-                            placeholder="Configured Access Point..." readonly
+                            placeholder="..." readonly
                             id="wifi_ap_configuration_state">
                     </div>
 
                     <div class="col-lg-4 mt-2">
                         <div class="">
-                            <label for='scan_wifi_button'>Configure another Access Point</label>
+                            <label for='scan_wifi_button' data-i18n="wifi.content.configure_connection">Configure another Access Point</label>
                             <button id="scan_wifi_button" type="button" class="btn btn-primary"
-                                style="display: block">Configure connection</button>
+                                style="display: block" data-i18n="wifi.content.connect_to_wifi">Configure connection</button>
                         </div>
                     </div>
                 </div>
@@ -39,11 +39,11 @@
             <div class="carousel-item">
                 <div id="wifi_scan_title"
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
-                    <h4>Scanning for Access Points...</h4>
+                    <h4  data-i18n="wifi.content.scanning_for_aps">Scanning for Access Points...</h4>
                 </div>
                 <div id="wifi_config_scan_spinner">
                     <div class="spinner-border" style="width: 3rem; height: 3rem;" role="status">
-                        <span class="sr-only">Scanning...</span>
+                        <span class="sr-only" data-i18n="wifi.content.scanning">Scanning...</span>
                     </div>
                 </div>
                 <div id="wifi_scan_results" hidden>
@@ -56,7 +56,7 @@
             <div class="carousel-item">
                 <div
                     class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pb-2 mb-3">
-                    <h4>Configure local access point behaviour</h4>
+                    <h4 data-i18n="wifi.content.configure_ap_mode">Configure local access point behaviour</h4>
                 </div>
                 <div class="col-lg-6">
                     <form>
@@ -65,7 +65,7 @@
                                 <input type="checkbox" class="custom-control-input"
                                     id="wifi_save_enable_sta" checked>
                                 <label id="wifi_config_connect_to_ap_switch"
-                                    class="custom-control-label" for="wifi_save_enable_sta">
+                                    class="custom-control-label" for="wifi_save_enable_sta"  data-i18n="wifi.content.sta_on_boot">
                                     Connect to this access point on start-up.
                                 </label>
                             </div>
@@ -74,7 +74,7 @@
                             <div class="custom-control custom-switch">
                                 <input type="checkbox" class="custom-control-input"
                                     id="wifi_save_enable_ap" checked>
-                                <label class="custom-control-label" for="wifi_save_enable_ap">
+                                <label class="custom-control-label" for="wifi_save_enable_ap"  data-i18n="wifi.content.ap_on_boot">
                                     Open local access point on start-up.
                                 </label>
                             </div>
@@ -84,17 +84,15 @@
                                 <input type="checkbox" class="custom-control-input"
                                     id="wifi_save_ap_fallback_only" checked>
                                 <label id="wifi_config_ap_fallback_switch"
-                                    class="custom-control-label" for="wifi_save_ap_fallback_only">
-                                    Use access point only as fallback if connecting to the access
-                                    point
-                                    fails.
+                                    class="custom-control-label" for="wifi_save_ap_fallback_only" data-i18n="wifi.content.ap_as_fallback">
+                                    Use access point only as fallback if connecting to the access point fails.
                                 </label>
                             </div>
                         </div>
                     </form>
                     <div class="text-right">
                         <button id="wifi_config_ap_fallback_save" type="button"
-                            class="btn btn-primary">Finish</button>
+                            class="btn btn-primary" data-i18n="wifi.content.finish">Finish</button>
                     </div>
                 </div>
 
@@ -105,22 +103,20 @@
                         class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <form-label class="modal-title">Reboot to apply configuration</form-label>
+                                <form-label class="modal-title" data-i18n="wifi.content.reboot_title">Reboot to apply configuration</form-label>
                                 <button type="button" class="close" data-dismiss="modal"
                                     aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
-                            <div class="modal-body">
-                                <p>To apply the changed WiFi configuration, the ESP has to be
-                                    rebooted. Reboot
-                                    now?</p>
+                            <div class="modal-body" data-i18n="wifi.content.reboot_content">
+                                To apply the changed WiFi configuration, the ESP has to be rebooted. Reboot now?
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-secondary"
-                                    data-dismiss="modal">Abort</button>
+                                    data-dismiss="modal" data-i18n="wifi.content.abort">Abort</button>
                                 <button id="wifi_reboot_button" type="button"
-                                    class="btn btn-danger">Reboot</button>
+                                    class="btn btn-danger" data-i18n="wifi.content.reboot">Reboot</button>
                             </div>
                         </div>
                     </div>
