--- a/software/modules/frontend/wifi/navbar.html
+++ b/software/modules/frontend/wifi/navbar.html
@@ -2,6 +2,6 @@
     <a id="sidebar-wifi" class="nav-link" data-toggle="tab" role="tab" aria-controls="wifi"
         aria-selected="true" href="#wifi" hidden>
         <span data-feather="wifi"></span>
-        WiFi Settings
+        <span data-i18n="wifi.navbar.wifi">WiFi</span>
     </a>
 </li>
