--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -1,34 +1,34 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-flash" id="flash">
     <div
         class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 mb-3 border-bottom">
-        <h1 class="h2">Firmware</h1>
+        <h1 class="h2" data-i18n="firmware_update.content.system">Firmware</h1>
     </div>
 
     <form method='POST' action='#' enctype='multipart/form-data' id='upload_firmware_form'>
         <div class="form-group row">
             <div class="col-lg-3 mt-2">
-                <label for='current_firmware'>Current Firmware</label>
-                <input class="form-control" type="text" placeholder="Current Firmware..." readonly
+                <label for='current_firmware' data-i18n="firmware_update.content.current_firmware">Current Firmware</label>
+                <input class="form-control" type="text" placeholder="..." readonly
                     id="current_firmware">
             </div>
 
             <div class="col-lg-6 mt-2">
-                <label id="firmware_label" for='firmware_file_select'>Firmware Update</label>
+                <label id="firmware_label" for='firmware_file_select' data-i18n="firmware_update.content.firmware_update">Firmware Update</label>
                 <div class="input-group mb-3">
                     <div class="custom-file">
                         <input name="firmware" type="file" class="custom-file-input form-control"
                             id="firmware_file_select">
                         <label class="custom-file-label form-control"
-                            for="firmware_file_select">Select File</label>
+                            for="firmware_file_select" data-browse="Browse" data-i18n="firmware_update.content.browse firmware_update.content.select_file" data-i18n-attr="data-browse innerHTML">Select File</label>
                     </div>
                     <div class="input-group-append">
-                        <input id="update_firmware_button" type='submit' value="Update"
+                        <input id="update_firmware_button" type='submit'  data-i18n="firmware_update.content.update" data-i18n-attr="value" value="Update"
                             class="btn btn-primary form-control" disabled>
                     </div>
                 </div>
             </div>
             <div class="col-lg-3 mt-2" id="firmware-progress" hidden>
-                <label for='firmware-progress-bar'>Uploading Firmware...</label>
+                <label for='firmware-progress-bar' data-i18n="firmware_update.content.uploading">Uploading Firmware...</label>
                 <div class="form-progress">
                     <div id="firmware-progress-bar" class="progress-bar form-control"
                         role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0"
@@ -41,14 +41,14 @@
     <form method='POST' action='#' enctype='multipart/form-data' id='upload_spiffs_form'>
         <div class="form-group row">
             <div class="col-lg-3 mt-2">
-                <label for='current_spiffs'>Current SPIFFS</label>
-                <input class="form-control" type="text" placeholder="Current SPIFFS..." readonly
+                <label for='current_spiffs' data-i18n="firmware_update.content.current_spiffs">Current SPIFFS</label>
+                <input class="form-control" type="text" placeholder="..." readonly
                     id="current_spiffs">
             </div>
 
             <div class="col-lg-3 mt-2">
-                <label id="spiffs_label" for='spiffs_factory_reset'>Reset all settings to factory default</label>
-                <button id="spiffs_factory_reset" type="button" class="form-control btn btn-danger">Factory Reset</button>
+                <label id="spiffs_label" for='spiffs_factory_reset' data-i18n="firmware_update.content.factory_reset_desc">Reset all settings to factory default</label>
+                <button id="spiffs_factory_reset" type="button" class="form-control btn btn-danger" data-i18n="firmware_update.content.factory_reset">Factory Reset</button>
             </div>
         </div>
     </form>
@@ -57,19 +57,19 @@
         <div id="factory_reset_content" class="modal-dialog modal-dialog-centered modal-dialog-scrollable modal-xl">
             <div class="modal-content">
                 <div class="modal-header">
-                    <form-label class="modal-title">Factory Reset</form-label>
+                    <form-label class="modal-title" data-i18n="firmware_update.content.factory_reset">Factory Reset</form-label>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body">
-                    A factory reset will reset all settings to their default values. <b>This action cannot be undone.</b> The wallbox will re-open the WiFi access point with the default SSID and passphrase. Are you sure?
+                <div class="modal-body"  data-i18n="firmware_update.content.factory_reset_modal_text">
+                    A factory reset will reset all settings to their default values. <b>This action cannot be undone!</b> The wallbox will re-open the WiFi access point with the default SSID and passphrase. Are you sure?
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary"
-                        data-dismiss="modal">Abort</button>
+                        data-dismiss="modal" data-i18n="firmware_update.content.abort_reset">Abort</button>
                     <button id="factory_reset_confirm" type="button"
-                        class="btn btn-danger">Reset to factory defaults</button>
+                        class="btn btn-danger" data-i18n="firmware_update.content.confirm_reset">Reset to factory defaults</button>
                 </div>
             </div>
         </div>
