--- a/software/modules/frontend/proxy/navbar.html
+++ b/software/modules/frontend/proxy/navbar.html
@@ -2,6 +2,6 @@
     <a id="sidebar-bricklets" class="nav-link" data-toggle="tab" role="tab"
         aria-controls="bricklets" aria-selected="true" href="#bricklets" hidden>
         <span data-feather="cpu"></span>
-        Bricklets
+        <span data-i18n="proxy.navbar.bricklets">Bricklets</span>
     </a>
 </li>
