--- a/software/modules/frontend/mqtt/content.html
+++ b/software/modules/frontend/mqtt/content.html
@@ -1,19 +1,19 @@
 <div class="tab-pane fade" role="tabpanel" aria-labelledby="sidebar-mqtt" id="mqtt">
+    <div
+            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+            <h1 class="h2" data-i18n="mqtt.content.mqtt">MQTT</h1>
+    </div>
     <form id="mqtt_config_form" class="needs-validation" novalidate>
         <!--
             Use custom validation instead of the browser default, that is broken on Chrome
             See: https://getbootstrap.com/docs/4.5/components/forms/#validation
         -->
-        <div
-            class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-            <h1 class="h2" data-i18n="mqtt.content.mqtt">MQTT</h1>
-        </div>
 
         <div class="form-group row">
-            <div id="blah" class="col-sm-3">
+            <div id="blah" class="col-lg-3 col-xl-2">
                 <label for="mqtt_enable" class="col-form-label" data-i18n="mqtt.content.enable_mqtt">Enable MQTT</label>
             </div>
-            <div class="col-sm-9">
+            <div class="col-lg-9 col-xl-6">
                 <div class="custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="mqtt_enable">
                     <label class="custom-control-label" for="mqtt_enable" data-i18n="mqtt.content.enable_mqtt_desc">
@@ -24,31 +24,31 @@
         </div>
         <div class="form-group row">
             <label for="mqtt_broker_host"
-                class="col-sm-3 col-form-label" data-i18n="mqtt.content.broker_host">Broker Host</label>
-            <div class="col-sm-9">
+                class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.broker_host">Broker Host</label>
+            <div class="col-lg-9 col-xl-6">
                 <input id="mqtt_broker_host" class="form-control" type="text" required>
             </div>
         </div>
 
         <div class="form-group row">
             <label for="mqtt_broker_port"
-                class="col-sm-3 col-form-label" data-i18n="mqtt.content.port">Broker Port</label>
-            <div class="col-sm-9">
+                class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.port">Broker Port</label>
+            <div class="col-lg-9 col-xl-6">
                 <input id="mqtt_broker_port" class="form-control" type="number" min="1" max="65536" value="1883">
             </div>
         </div>
 
         <div class="form-group row">
             <label for="mqtt_broker_username"
-                class="col-sm-3 col-form-label" data-i18n="mqtt.content.username">Broker Username</label>
-            <div class="col-sm-9">
+                class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.username">Broker Username</label>
+            <div class="col-lg-9 col-xl-6">
                 <input id="mqtt_broker_username" class="form-control" type="text">
             </div>
         </div>
 
         <div class="form-group row" id="wifi_cfg_passphrase_form">
-            <label for="mqtt_broker_password" class="col-sm-3 col-form-label" data-i18n="mqtt.content.password">Broker Password</label>
-            <div class="col-sm-9">
+            <label for="mqtt_broker_password" class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.password">Broker Password</label>
+            <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
                     <input type="password" id="mqtt_broker_password" class="form-control" value=""/>
                     <div class="input-group-append">
@@ -62,21 +62,23 @@
         </div>
 
         <div class="form-group row">
-            <label for="mqtt_topic_prefix" class="col-sm-3 col-form-label" data-i18n="mqtt.content.topic_prefix">Topic Prefix</label>
-            <div class="col-sm-9">
+            <label for="mqtt_topic_prefix" class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.topic_prefix">Topic Prefix</label>
+            <div class="col-lg-9 col-xl-6">
                 <input id="mqtt_topic_prefix" class="form-control" type="text">
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="mqtt_client_name" class="col-sm-3 col-form-label" data-i18n="mqtt.content.client_name">Client Name</label>
-            <div class="col-sm-9">
+            <label for="mqtt_client_name" class="col-lg-3 col-xl-2 col-form-label" data-i18n="mqtt.content.client_name">Client Name</label>
+            <div class="col-lg-9 col-xl-6">
                 <input id="mqtt_client_name" class="form-control" type="text">
             </div>
         </div>
 
-        <div class="text-right">
-            <button id="mqtt_save_button" type="submit" form="mqtt_config_form" class="btn btn-primary" data-i18n="mqtt.content.save">Save</button>
+        <div class="form-group row">
+            <div class="col-lg-12 col-xl-8 text-right">
+                <button id="mqtt_save_button" type="submit" form="mqtt_config_form" class="btn btn-primary" data-i18n="mqtt.content.save">Save</button>
+            </div>
         </div>
     </form>
 
