Fine-tune UI and translations.

--- a/software/modules/frontend/mqtt/content.html
+++ b/software/modules/frontend/mqtt/content.html
@@ -54,7 +54,7 @@
                     <div class="input-group-append">
                         <div class="input-group-text custom-control custom-switch" style="padding-left: 2.5rem;">
                             <input id="mqtt_show_password" type="checkbox" class="custom-control-input" aria-label="Show password" value="test">
-                            <label class="custom-control-label" for="mqtt_show_password">Show password</label>
+                            <label class="custom-control-label" for="mqtt_show_password" data-i18n="mqtt.content.show_password">Show password</label>
                         </div>
                     </div>
                 </div>
