--- a/software/modules/frontend/wifi/content.html
+++ b/software/modules/frontend/wifi/content.html
@@ -11,10 +11,10 @@
 
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_sta_enable_sta" class="col-form-label" data-i18n="wifi.content.sta_enable_sta">Enable connection to Access Point</label>
+                <label for="wifi_sta_enable_sta" class="col-form-label form-label" data-i18n="wifi.content.sta_enable_sta">Enable connection to Access Point</label>
             </div>
             <div class="col-lg-9 col-xl-6">
-                <div class="custom-control custom-switch">
+                <div class="borderless-form-control custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="wifi_sta_enable_sta">
                     <label class="custom-control-label" for="wifi_sta_enable_sta" data-i18n="wifi.content.sta_enable_sta_desc">
                         Blah blah blah
@@ -25,11 +25,11 @@
 
         <div class="form-group row">
             <label for="wifi_sta_ssid"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.sta_ssid">Network name (SSID)</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_ssid">Network name (SSID)</label>
             <div class="col-lg-9 col-xl-6 input-group">
                 <input id="wifi_sta_ssid" class="form-control" type="text" required>
                 <div id="scan_wifi_dropdown" class="input-group-append dropdown">
-                    <button id="scan_wifi_button" class="form-control btn btn-primary rounded-right dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-i18n="wifi.content.sta_scan">Scan for Networks</button>
+                    <button id="scan_wifi_button" class="form-control btn btn-primary rounded-right dropdown-toggle" type="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-i18n="wifi.content.sta_scan" style="color: white !important;">Scan for Networks</button>
                     <div class="dropdown-menu  dropdown-menu-right" aria-labelledby="dropdownMenuButton" style="box-shadow: 0rem 0.25rem 0.5rem rgba(0, 0, 0, 0.2);">
                         <h6 id="wifi_scan_title" class="dropdown-header" data-i18n="wifi.content.sta_scanning">Scanning for Access Points...</h6>
                         <div id="wifi_config_scan_spinner" class="text-center">
@@ -47,7 +47,7 @@
 
         <div class="form-group row">
             <label for="wifi_sta_bssid"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.sta_bssid">BSSID</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_bssid">BSSID</label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_sta_bssid" class="form-control" type="text" required>
             </div>
@@ -55,10 +55,10 @@
 
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_sta_bssid_lock" class="col-form-label" data-i18n="wifi.content.sta_bssid_lock">BSSID Lock</label>
+                <label for="wifi_sta_bssid_lock" class="col-form-label form-label" data-i18n="wifi.content.sta_bssid_lock">BSSID Lock</label>
             </div>
             <div class="col-lg-9 col-xl-6">
-                <div class="custom-control custom-switch">
+                <div class="borderless-form-control custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="wifi_sta_bssid_lock">
                     <label class="custom-control-label" for="wifi_sta_bssid_lock" data-i18n="wifi.content.sta_bssid_lock_desc">
                         Blah blah blah
@@ -68,7 +68,7 @@
         </div>
 
         <div class="form-group row" id="wifi_cfg_passphrase_form">
-            <label for="wifi_sta_passphrase" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.sta_passphrase">Passphrase</label>
+            <label for="wifi_sta_passphrase" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_passphrase">Passphrase</label>
             <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
                     <input type="password" id="wifi_sta_passphrase" class="form-control" value="" placeholder="" data-i18n="wifi.content.unchanged" data-i18n-attr="placeholder"/>
@@ -84,14 +84,14 @@
 
         <div class="form-group row">
             <label for="wifi_sta_hostname"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.sta_hostname">Hostname</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_hostname">Hostname</label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_sta_hostname" class="form-control" type="text" required>
             </div>
         </div>
 
         <div class="form-group row">
-            <label for="wifi_sta_show_static" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.sta_ip_configuration">IP Configuration</label>
+            <label for="wifi_sta_show_static" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.sta_ip_configuration">IP Configuration</label>
 
             <div class="col-lg-9 col-xl-6">
                 <select id="wifi_sta_show_static" class="custom-select">
@@ -103,7 +103,7 @@
         <div class="collapse" id="wifi_sta_static_ip_cfg">
             <div class="form-group row">
                 <label for="wifi_sta_ip"
-                    class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.static_ip"></label>
+                    class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.static_ip"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_ip" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -114,7 +114,7 @@
 
             <div class="form-group row">
                 <label for="wifi_sta_subnet"
-                    class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.subnet"></label>
+                    class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.subnet"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_subnet" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -125,7 +125,7 @@
 
             <div class="form-group row">
                 <label for="wifi_sta_gateway"
-                    class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.gateway"></label>
+                    class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.gateway"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_gateway" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -135,7 +135,7 @@
             </div>
 
             <div class="form-group row">
-                <label for="wifi_sta_dns" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.dns"></label>
+                <label for="wifi_sta_dns" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.dns"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_dns" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -145,7 +145,7 @@
             </div>
 
             <div class="form-group row">
-                <label for="wifi_sta_dns2" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.dns2"></label>
+                <label for="wifi_sta_dns2" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.dns2"></label>
                 <div class="col-lg-9 col-xl-6">
                     <input id="wifi_sta_dns2" class="form-control" type="text"
                         minlength="7" maxlength="15" size="15"
@@ -171,7 +171,7 @@
     <form id="wifi_ap_form" class="needs-validation" novalidate>
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_ap_enable_ap" class="col-form-label" data-i18n="wifi.content.ap_enable">Enable Access Point</label>
+                <label for="wifi_ap_enable_ap" class="col-form-label form-label" data-i18n="wifi.content.ap_enable">Enable Access Point</label>
             </div>
             <div class="col-lg-9 col-xl-6">
                 <select id="wifi_ap_enable_ap" class="custom-select">
@@ -183,18 +183,18 @@
         </div>
         <div class="form-group row">
             <label for="wifi_ap_ssid"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_ssid">Network name (SSID)</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_ssid">Network name (SSID)</label>
             <div class="col-lg-9 col-xl-6">
-                <input id="wifi_ap_ssid" class="form-control" type="text" required>
+                <input id="wifi_ap_ssid" class="form-control" type="text" maxlength="32" required>
             </div>
         </div>
 
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_ap_hide_ssid" class="col-form-label" data-i18n="wifi.content.ap_hide_ssid">Hide SSID</label>
+                <label for="wifi_ap_hide_ssid" class="col-form-label form-label" data-i18n="wifi.content.ap_hide_ssid">Hide SSID</label>
             </div>
             <div class="col-lg-9 col-xl-6">
-                <div class="custom-control custom-switch">
+                <div class="borderless-form-control custom-control custom-switch">
                     <input type="checkbox" class="custom-control-input" id="wifi_ap_hide_ssid">
                     <label class="custom-control-label" for="wifi_ap_hide_ssid" data-i18n="wifi.content.ap_hide_ssid_desc">
                         <span data-i18n="wifi.content.ap_hide_ssid_desc_pre"></span><span id="wifi_ap_bssid"></span><span data-i18n="wifi.content.ap_hide_ssid_desc_post"></span>
@@ -204,7 +204,7 @@
         </div>
 
         <div class="form-group row" id="wifi_cfg_passphrase_form">
-            <label for="wifi_ap_passphrase" class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_passphrase">Passphrase</label>
+            <label for="wifi_ap_passphrase" class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_passphrase">Passphrase</label>
             <div class="col-lg-9 col-xl-6">
                 <div class="input-group">
                     <input type="password" id="wifi_ap_passphrase" class="form-control" value="" placeholder="" data-i18n="wifi.content.unchanged" data-i18n-attr="placeholder"/>
@@ -220,7 +220,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_hostname"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_hostname">Hostname</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_hostname">Hostname</label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_hostname" class="form-control" type="text" required>
             </div>
@@ -228,7 +228,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_channel"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_channel">Channel<span class="text-muted">ignored if connected to another AP</span></label>
+                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_channel"><span class="form-label">Channel</span><span class="text-muted">ignored if connected to another AP</span></label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_channel" class="form-control" type="number" min="1" max="13" required>
             </div>
@@ -236,7 +236,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_ip"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_ip">IP</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_ip">IP</label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_ip" class="form-control" type="text"
                     minlength="7" maxlength="15" size="15"
@@ -247,7 +247,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_subnet"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_subnet">Subnet Mask</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_subnet">Subnet Mask</label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_subnet" class="form-control" type="text"
                     minlength="7" maxlength="15" size="15"
@@ -258,7 +258,7 @@
 
         <div class="form-group row">
             <label for="wifi_ap_gateway"
-                class="col-lg-3 col-xl-2 col-form-label" data-i18n="wifi.content.ap_gateway">Gateway</label>
+                class="col-lg-3 col-xl-2 col-form-label form-label" data-i18n="wifi.content.ap_gateway">Gateway</label>
             <div class="col-lg-9 col-xl-6">
                 <input id="wifi_ap_gateway" class="form-control" type="text"
                     minlength="7" maxlength="15" size="15"
