Add current date and time to debug report filename.

--- a/software/modules/frontend/firmware_update/content.html
+++ b/software/modules/frontend/firmware_update/content.html
@@ -50,7 +50,7 @@
             </div>
 
             <div class="col-lg-3 mt-2">
-                <a href="/debug_report" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.debug_report" download>Download Debug Report</a>
+                <a id="download_debug_report" href="/debug_report" class="form-control btn btn-primary mb-1" data-i18n="firmware_update.content.debug_report" download="debug_report.txt">Download Debug Report</a>
                 <label id="spiffs_label" for='debug_report' data-i18n="firmware_update.content.debug_report_desc">A complete report of all status information of this device except passwords.</label>
             </div>
         </div>
