wifi: Show STA IP when connected.

--- a/software/modules/frontend/wifi/status.html
+++ b/software/modules/frontend/wifi/status.html
@@ -1,7 +1,7 @@
 <div class="form-group row no-gutters">
     <div class="col-sm-4">
-        <label id="wifi_sta_connection_name" for="wifi_sta_not_configured" class="col-form-label">
-            <span class="form-label" data-i18n="wifi.status.wifi_connection">WiFi Connection </span>
+        <label for="wifi_sta_not_configured" class="col-form-label">
+            <span class="form-label pr-2" id="wifi_sta_connection_name" data-i18n="wifi.status.wifi_connection">WiFi Connection </span><span class="text-muted" id="status_wifi_sta_ip"></span>
         </label>
     </div>
     <div class="col-lg-8 col-xl-4">
