Fine-tune layout and translations.

--- a/software/modules/frontend/wifi/content.html
+++ b/software/modules/frontend/wifi/content.html
@@ -173,7 +173,7 @@
     <form id="wifi_ap_form" class="needs-validation" novalidate>
         <div class="form-group row">
             <div id="blah" class="col-lg-3 col-xl-2">
-                <label for="wifi_ap_enable_ap" class="col-form-label form-label" data-i18n="wifi.content.ap_enable">Enable Access Point</label>
+                <label for="wifi_ap_enable_ap" class="col-form-label" data-i18n="wifi.content.ap_enable">Enable Access Point</label>
             </div>
             <div class="col-lg-9 col-xl-6">
                 <select id="wifi_ap_enable_ap" class="custom-select">
